# Production_chat

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  modal_app.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 1773a0d7d44a_merge_observability_and_ingestion_heads.py  20260625_0001_add_conversations_and_messages.py  20260626_0002_add_knowledge_chunks.py  20260626_0003_add_vector_retrieval.py  20260627_0004_resize_embedding_vectors_for_hf.py  20260627_0005_drop_knowledge_chunk_embedding_column.py  20260628_0006_add_message_model_metadata.py  20260628_0007_add_rag_eval_tables.py  20260629_0008_add_message_channel_and_metadata.py  20260706_0009_add_chat_trace_tables.py  20260707_0010_add_message_feedback_table.py  (+4 more)
app/: Dockerfile  config.py  main.py
docs/: README.md  architecture.md  configuration.md  contributing.md  deployment.md  evaluation.md  ingestion.md  local-development.md  observability.md  tavus-integration-playbook.md  troubleshooting.md
evals/: README.md  export_bad_langfuse_traces.py  langfuse_trace_exporter.py  prompt_eval_questions.jsonl  query_rewriter.py  retrieval_eval_runner.py  run_experiment_matrix.py  run_generation_eval.py  run_model_eval.py  run_rag_eval.py  run_retrieval_eval.py  run_retrieval_sweep.py
frontend/: README.md  index.html  package-lock.json  package.json
scripts/: compare_prompts.py  ingest_knowledge.py  run_chunking_experiment.py  run_embedding_experiment.py  trigger_ingestion.py
tests/: test_chat_api.py  test_chat_routing.py  test_chunking_experiment_script.py  test_config.py  test_db_session.py  test_embedding_experiment_script.py  test_embedding_providers.py  test_eval_runner_filenames.py  test_evals_api.py  test_generation_eval_service.py  test_knowledge_api.py  test_knowledge_file_upload.py  test_knowledge_ingestion.py  test_knowledge_ingestion_jobs.py  test_llm_clients.py  test_main.py  test_model_registry.py  test_observability.py  test_openrouter_pricing.py  test_rag_eval_metrics.py  test_rate_limiting.py  test_reranker.py  test_retrieval_eval_metrics.py  test_retrieval_service.py  test_tavus_api.py  test_tracking_setup.py
(+290 files in other folders)
