[project]
name = "production-chatbot"
version = "0.1.0"
description = "FastAPI backend for a personal website chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pytest>=8.0.0,<9.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]
