[project]
name = "production-chatbot"
version = "0.1.0"
description = "FastAPI backend for a personal website chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0,<2.0.0",
    "boto3>=1.43.0,<2.0.0",
    "dagshub>=0.7.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "langfuse>=4.13.0,<5.0.0",
    "langchain-huggingface>=1.2.2,<2.0.0",
    "langchain-postgres>=0.0.17,<1.0.0",
    "langchain-text-splitters>=0.3.0,<1.0.0",
    "mlflow>=2.16.0,<4.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pytest>=8.0.0,<9.0.0",
    "sentence-transformers>=5.2.0,<6.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "ruff>=0.15.20",
]

[project.optional-dependencies]
deploy = [
    "modal>=1.0.0,<2.0.0",
]
response-cache = [
    "redis>=5.2.0,<6.0.0",
    "redisvl>=0.8.0,<1.0.0",
]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"
cache_dir = ".pytest_tmp/.pytest_cache"

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"evals/feedback/*.py" = ["E402"]
"evals/langfuse/*.py" = ["E402"]
"evals/runners/*.py" = ["E402"]
